<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tv_title"
        android:text="@string/app_name"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:padding="16dp"
        android:gravity="center"
        android:background="@color/colorPrimary"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_email"
        android:hint="@string/email"
        android:layout_below="@+id/tv_title"
        android:layout_marginTop="24dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_password"
        android:hint="@string/password"
        android:layout_below="@+id/et_email"
        android:layout_marginTop="24dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_login"
        android:text="@string/login"
        android:layout_below="@+id/et_password"
        android:layout_marginTop="24dp"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tv_register"
        android:text="@string/registrarme"
        android:layout_alignParentBottom="true"
        android:padding="16dp"
        android:gravity="center"/>


</RelativeLayout>